--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -20,17 +20,18 @@
       </div>
 
       <div class="actions">
-        <button id="downloadBtn" class="primary">Capture Visible</button>
-        <button id="delayedBtn">Capture Visible (Delayed 3s)</button>
+        <button id="downloadBtn" class="primary">Capture Current View</button>
+        <button id="delayedBtn">Capture Dropdown (Delay 3s)</button>
         <button id="areaBtn">Capture Area</button>
-        <button id="fullPageBtn">Capture Full Page</button>
-        <button id="extendedBtn">Extended: Start</button>
+        <button id="fullPageBtn">Capture Full Page (Auto-Scroll)</button>
+        <button id="extendedBtn">Long Capture: Start</button>
       </div>
 
       <p id="status" class="status" aria-live="polite"></p>
-      <p class="hint">Dropdown flow: click Delayed 3s, reopen dropdown, capture happens automatically.</p>
+      <p class="hint">Current View = visible part only. Full Page = auto-scroll whole page.</p>
+      <p class="hint">Dropdown flow: click Delay 3s, reopen dropdown, capture happens automatically.</p>
       <p class="hint">Area flow: click Capture Area, drag on page, release to preview.</p>
-      <p class="hint">Extended flow: Start, scroll manually, reopen extension, then Finish.</p>
+      <p class="hint">Long Capture flow: Start, scroll manually, reopen extension, then Finish.</p>
       <p class="hint">Use preview actions to copy image or download to Screenshots folders.</p>
       <p class="hint">Shortcuts: Ctrl/Cmd+Shift+S (visible), Ctrl/Cmd+Shift+F (full page)</p>
     </main>
